Refactoring the complete code for better testing

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,7 @@ board_build.flash_size = 4MB
 ;upload_port = 192.168.178.100
 ;upload_flags = 
 ;	--auth='password'
+
+;[env:native]
+;platform = native
+;test_framework = unity
