--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.3.1
 	vshymanskyy/Preferences@^2.1.0
+	esp32async/ESPAsyncWebServer@^3.7.9
 board_build.filesystem = littlefs
 board_build.flash_size = 4MB
 ;upload_protocol = espota
