--- a/platformio.ini
+++ b/platformio.ini
@@ -21,11 +21,15 @@ lib_deps =
 	esp32async/ESPAsyncWebServer@^3.7.9
 board_build.filesystem = littlefs
 board_build.flash_size = 4MB
+
+;OTA Update
 ;upload_protocol = espota
-;upload_port = 192.168.178.100
+;upload_port = 'IP-Address'
 ;upload_flags = 
 ;	--auth='password'
 
-;[env:native]
-;platform = native
-;test_framework = unity
+[env:native]
+platform = native
+test_framework = googletest
+lib_deps =
+	google/googletest@^1.14.0
